added advertisement and did styling on cards

--- a/dvideo/src/components/contest-tile/contest-tile.styles.scss
+++ b/dvideo/src/components/contest-tile/contest-tile.styles.scss
@@ -1,9 +1,11 @@
-.contest-tile{
+.contest-tile {
     border-style: dashed;
+    border-radius: 50px;
     display: flex;
     padding: 10px;
     margin: 10px;
 }
-.vs-logo{
+
+.vs-logo {
     width: 100px;
- }
+}
