--- a/dvideo/src/pages/select-team/select-team.styles.scss
+++ b/dvideo/src/pages/select-team/select-team.styles.scss
@@ -24,6 +24,9 @@
     //flex-direction: row;
     
 }
+.justify-content-center.row{
+    height: 150px
+}
 
 .player-button-on-pitch{
     //width: 5rem;
