--- a/dvideo/src/pages/player-details/player-details.styles.scss
+++ b/dvideo/src/pages/player-details/player-details.styles.scss
@@ -28,15 +28,15 @@
     color: white;
 }
 
-img {
- max-width:100%;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 10px;
-  width: 10px;
-  length: 10px;
+// img {
+//  max-width:100%;
+//   border: 1px solid #ddd;
+//   border-radius: 4px;
+//   padding: 10px;
+//   width: 10px;
+//   length: 10px;
   
-}
+// }
 
 img:hover {
   box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
