changed background styled contest-tiles

--- a/dvideo/src/components/player-card/player-card.styles.scss
+++ b/dvideo/src/components/player-card/player-card.styles.scss
@@ -15,6 +15,7 @@ img{
     height: 210px;
     transition:0.5s;
     cursor:pointer;
+    background-color: #485461;
   }
   .card-title{  
     font-size:15px;
