--- a/dvideo/src/components/contest-tile/contest-tile.styles.scss
+++ b/dvideo/src/components/contest-tile/contest-tile.styles.scss
@@ -9,3 +9,53 @@
 .vs-logo {
     width: 100px;
 }
+
+// .card-img-top.home{
+//     height: 150px;
+//     width: 150px;
+// }
+
+// .card-img-top.away{
+//     height: 150px;
+//     width: 150px;
+// }
+
+.contest-card.card{
+    margin: 10px;
+}
+
+.home-name.card-text{
+    text-align: center;
+    font-weight: bold;
+    color: black;
+
+}
+
+
+.away-name.card-text{
+    margin-left: 30px;
+    font-weight: bold;
+    color: black;
+}
+
+
+
+.card-img-top.home{
+    height: 120px;
+    width: 120px;
+    margin-left: 120px;
+}
+
+.card-img-top.away{
+    height: 120px;
+    width: 120px;
+}
+
+.card-img-top.vs-logo{
+    height: 120px;
+    width: 120px;
+    margin-left: 80px;
+}
+.mb-2.btn-group.btn-group-toggle{
+    padding: 2px;
+}
