--- a/dvideo/src/pages/points/points.styles.scss
+++ b/dvideo/src/pages/points/points.styles.scss
@@ -80,12 +80,8 @@ h1 {
   }
 
   .mainDiv{
-      background-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.3LWga6rdoS644kktIJ0z4wHaDi%26pid%3DApi&f=1) !important;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-size: cover;
-      background-blend-mode: lighten;
-  
-  
+      //background-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.3LWga6rdoS644kktIJ0z4wHaDi%26pid%3DApi&f=1) !important;
+      background-color: #f6f6f6;
+      background-image: linear-gradient(315deg, #f6f6f6 0%, #e9e9e9 74%);
   
     }
