updated homepage admin page and added api route for contest data

--- a/dvideo/src/pages/home-page/home-page.styles.scss
+++ b/dvideo/src/pages/home-page/home-page.styles.scss
@@ -2,23 +2,6 @@ body {
   background-color: #000;
 }
 
-.heading {
-  text-align: center;
-  padding: 10px;
-  background: black;
-  color: white;
-  position: relative;
-}
-
-#head {
-  z-index: 1;
-  position: relative;
-  text-align: center;
-  // To-Do uncomment for placing heading at center
-  //padding-top: 40vh;
-
-}
-
 #landing-header {
   z-index: 1;
   position: relative;
@@ -26,14 +9,12 @@ body {
   padding-top: 40vh;
 }
 
-.welcome {
+.welcome{
   background-color: black;
 
-}
+  height: 10px;
 
-.maintext {
-  color: white;
-  background-color: black;
+  //width: 500px;
 
 }
 
@@ -41,7 +22,7 @@ body {
   color: #fff;
 }
 
-.slideshow {
+.slideshow { 
   position: fixed;
   width: 100%;
   height: 100%;
@@ -53,7 +34,7 @@ body {
   padding: 0;
 }
 
-.slideshow li {
+.slideshow li { 
   width: 100%;
   height: 100%;
   position: absolute;
@@ -64,48 +45,41 @@ body {
   background-repeat: no-repeat;
   opacity: 0;
   z-index: 0;
-  animation: imageAnimation 50s linear infinite;
+  animation: imageAnimation 50s linear infinite; 
 }
 
-.slideshow li:nth-child(1) {
-  background-image: url(https://experiences.lastminute.com/content/img/product/large/arsenal-stadium-tour-25105220.jpg);
+.slideshow li:nth-child(1) { 
+  background-image: url(https://experiences.lastminute.com/content/img/product/large/arsenal-stadium-tour-25105220.jpg); 
 }
-
-.slideshow li:nth-child(2) {
+.slideshow li:nth-child(2) { 
   background-image: url(https://static.standard.co.uk/s3fs-public/thumbnails/image/2020/06/26/00/liverpool-anfield-250620zv.jpg);
-  animation-delay: 10s;
+  animation-delay: 10s; 
 }
-
-.slideshow li:nth-child(3) {
+.slideshow li:nth-child(3) { 
   background-image: url(https://www.telegraph.co.uk/content/dam/football/2017/12/06/TELEMMGLPICT000147096378_trans_NvBQzQNjv4Bq6GsIbqkfGgLbZAsoNaCr2wqe2e5lIAHHRgI1UVRX-8Y.jpeg);
-  animation-delay: 20s;
+  animation-delay: 20s; 
 }
-
-.slideshow li:nth-child(4) {
+.slideshow li:nth-child(4) { 
   background-image: url(https://www.mumbaiindians.com/static-assets/images/cssimages/banner-3.jpg);
-  animation-delay: 30s;
+  animation-delay: 30s; 
 }
-
-.slideshow li:nth-child(5) {
+.slideshow li:nth-child(5) { 
   background-image: url(http://i.imgur.com/TVGe0Ef.jpg);
-  animation-delay: 40s;
+  animation-delay: 40s; 
 }
 
-@keyframes imageAnimation {
-  0% {
-    opacity: 0;
+@keyframes imageAnimation { 
+  0% { 
+    opacity: 0; 
     animation-timing-function: ease-in;
   }
-
   10% {
     opacity: 1;
     animation-timing-function: ease-out;
   }
-
   20% {
     opacity: 1
   }
-
   30% {
     opacity: 0
   }
@@ -113,5 +87,5 @@ body {
 
 /* Older browser support - .no-cssanimations class added by modernizr */
 .no-cssanimations .slideshow li {
-  opacity: 1;
+    opacity: 1;
 }
