styled player cards edited homepage edited pts calculation

--- a/dvideo/src/components/player-card-pitch-match-started/player-card-pitch-match-started.styles.scss
+++ b/dvideo/src/components/player-card-pitch-match-started/player-card-pitch-match-started.styles.scss
@@ -39,15 +39,17 @@
   }
   .player-position-pitch-started.card-text{
     font-size: small;
+    font-weight: bold;
     overflow: hidden;
   }
   .player-name-pitch-started{  
-    font-size:0.6em;
+    
     transition:1s;
     color:black;
     font-size: small;
     overflow: hidden;
     cursor:pointer;
+    
     
   }
   .player-position-pitch-started{
